<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo1"
    tools:context=".RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/logo"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/texto_principal"
                android:textAlignment="center"
                android:textColor="@color/azul"
                android:textSize="20sp"/>

            <LinearLayout
                android:id="@+id/l_contenido"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bloqueazul06">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <Button
                        android:id="@+id/b_alumno"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:text="Cuenta \nAlumno"
                        android:layout_marginRight="50dp"
                        android:backgroundTint="@color/azul"

                        />

                    <Button
                        android:id="@+id/b_maestro"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:text="Cuenta \nMaestro"
                        android:textColor="@color/azul"
                        android:backgroundTint="#d6c3c3"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="40dp"
                        android:orientation="vertical"
                        android:gravity="center">
                        <EditText
                            android:paddingLeft="2dp"
                            android:id="@+id/et_nombre"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/et_rounded"/>
                        <TextView
                            android:id="@+id/tv_nombre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/campo_nombre"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">
                        <EditText
                            android:paddingLeft="2dp"
                            android:id="@+id/et_apellido"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/et_rounded"/>
                        <TextView
                            android:id="@+id/tv_apellido"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/campo_apellido"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/campos_texto_margin"
                    android:orientation="vertical"
                    android:gravity="center">
                    <EditText
                        android:paddingLeft="2dp"
                        android:id="@+id/et_correo"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/et_rounded"/>
                    <TextView
                        android:id="@+id/tv_correo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/campo_correo"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/campos_texto_margin"
                    android:orientation="vertical"
                    android:gravity="center">
                    <EditText
                        android:id="@+id/et_contrasenia1"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:background="@drawable/et_rounded"/>
                    <TextView
                        android:id="@+id/tv_contrasenia1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/campo_contrasenia"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/campos_texto_margin"
                    android:orientation="vertical"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/et_contrasenia2"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:background="@drawable/et_rounded" />

                    <TextView
                        android:id="@+id/tv_contrasenia2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/campo_contrasenia2"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@drawable/fondoboton2"
                android:layout_gravity="center"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/b_registrarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent_button"
                    android:text="Registrar"
                    android:textSize="20sp"
                    />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>