<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo2"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/logo"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/iniciar_sesión"
                android:textAlignment="center"
                android:textColor="@color/azul"
                android:textSize="20sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:background="@drawable/rounded_image">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/niniocirculo1" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="María Inés"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:background="@drawable/rounded_image">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/niniocirculo2"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Francisco Ernesto"
                        android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/rounded_layout"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp">
                <EditText
                    android:id="@+id/et_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/campos_texto_margin"
                    android:backgroundTint="@color/azul"
                    android:textColor="@color/white"
                    android:background="@drawable/et_rounded"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/campo_correo"
                    android:textAlignment="center"/>
                <EditText
                    android:id="@+id/et_contrasenia"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/campos_texto_margin"
                    android:backgroundTint="@color/azul"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:background="@drawable/et_rounded"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/campo_contrasenia"
                    android:textAlignment="center"/>
                <Button
                    android:id="@+id/b_registrarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textStyle="italic"
                    android:background="@drawable/transparent_button"
                    android:textSize="12sp"
                    android:text="@string/registrarse"
                    android:textColor="@color/azul"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/fondoboton2"
                android:layout_gravity="center"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/b_aceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent_button"
                    android:text="Aceptar"
                    android:textSize="20sp"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>